Underlay: address warnings, minor optimizations