@@ -7,7 +7,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.apache.commons.text.StringSubstitutor;
 
 public class TypescriptWalker extends AnnotationWalker {
@@ -84,7 +83,7 @@ public class TypescriptWalker extends AnnotationWalker {
   private String getTypeNameOrSubstitutionLink(String typeName) {
     if (annotationPath.getClassesToWalk().stream()
         .map(Class::getTypeName)
-        .collect(Collectors.toList())
+        .toList()
         .contains(typeName)) {
       return "${" + typeName + "}";
     } else {
